--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@celo/contractkit": "^1.5.0",
     "@celo/utils": "^1.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "web3": "^1.3.0"
   }
